--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -116,6 +116,19 @@ HUN_treaty_of_trianon:0 "Treaty of Trianon"
  HUN_crisis_mission:0 "Crisis ends"
  HUN_minority:0 "Our minorities"
  HUN_minority_mission:0 "Realese minority"
+ HUN_openly_support_labour_unions:0 "Openly Support Labour Unions"
+ HUN_expand_women_rights:0 "Expand Women Rights"
+ HUN_expand_workers_rights:0 "Expand Workers Rights"
+ HUN_improve_working_conditions:0 "Improve Working Conditions"
+ HUN_raise_minimum_wage:0 "Raise Minimum Wage"
+ HUN_implement_subsidies_for_farmers:0 "Implement Subsidies for Farmers"
+ HUN_implement_universal_and_secret_voting:0 "Implement Universal and Secret voting"
+ HUN_establish_autonomy_to_minorities:0 "Establish Autonomy to Minorities"
+ HUN_establish_national_councils:0 "Establish National Councils"
+ HUN_expand_the_hegyvideki_action_to_slovaks:0 "Expand the Hegyvideki Action to Slovaks"
+ HUN_cantonize_transylvania:0 "Cantonize Transylvania"
+ HUN_cantonize_slovakia_and_carpat:0 "Cantonize Slovakia and Carpatho-Ruthenia"
+ HUN_cantonize_the_Southern_lands:0 "Cantonize the Southern-Lands"
  
  #events
  ww1_hungary.1.t:0 "autonomus for russins"
