--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -101,7 +101,9 @@ HUN_treaty_of_trianon:0 "Treaty of Trianon"
  HUN_settlement_of_social_public_situations:0 "Settlement of Social Public Situations"
  HUN_christian_politics:0 "Christian Politics"
  HUN_establish_the_national_assembly:0 "Establish the National Assembly"
-
+#tooltips
+HUN_plus_3ep:0 "you'll get §G3§! points of entente"
+HUN_plus_1ep:0 "you'll get §G1§! points of entente"
  #idea
  HUN_economy_in_ruins:0 "Economy in Ruins"
  HUN_entente_blockade:0 "Entente Blockade"
