--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2847,10 +2847,15 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_decision_cost_15armyxp:0 "£army_experience §Y15§!"
  TUR_decision_cost_15armyxp_blocked:0 "£army_experience §R15§!"
  TUR_minority_decision:0 "Management of Minorities"
- TUR_minority_decision_desc:0 "Our empire stretches from Balkans to Basra, Caucasus to Cyrenaica. Yet since we're not the initial habiters of these lands, many people who lived here when we first came still resides within our boundries. Centralization and reform policies started during Tanzimat has resulted in many minorities in our empire displeasant with our rule."
+ #TUR_minority_decision_desc:0 "Our empire stretches from Balkans to Basra, Caucasus to Cyrenaica. Yet since we're not the initial habiters of these lands, many people who lived here when we first came still resides within our boundries. Centralization and reform policies started during Tanzimat has resulted in many minorities in our empire displeasant with our rule."
  ALB_minority_decision:0 "Management of Minorities"
- ALB_minority_decision_desc:0 "While our autonomous vilayet is mostly consistet of Albanians, there are certain minorities within it. From Greeks of [758.GetName] to Serbs of [760.GetName], even the Turks in [203.GetName]; even the lands perceived as "Albanian" inhabit various minorities."
+ #ALB_minority_decision_desc:0 "While our autonomous vilayet is mostly consistet of Albanians, there are certain minorities within it. From Greeks of [758.GetName] to Serbs of [760.GetName], even the Turks in [203.GetName]; even the lands perceived as "Albanian" inhabit various minorities."
  TRS_minority_decision:0 "Management of Minorities"
+ ottoman_minority_effect_tooltip_347_blocked:0 "[347.GetName]\nModifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_ottoman_state_stability_factor_347][TUR_ottoman_state_war_support_factor_347][TUR_ottoman_state_political_power_factor_347][TUR_ottoman_state_consumer_goods_factor_347]"
+ TUR_ottoman_state_stability_factor_347_yes:0 "\n£stability_texticon  Stability: [?347.TUR_ottoman_state_stability_factor|=2%+]"
+ TUR_ottoman_state_war_support_factor_347_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?347.TUR_ottoman_state_war_support_factor|=2%+]"
+ TUR_ottoman_state_political_power_factor_347_yes:0 "\n£political_power_texticon  Political Power Gain: [?347.TUR_ottoman_state_political_power_factor|=2%+]"
+ TUR_ottoman_state_consumer_goods_factor_347_yes:0 "\n£consumer_goods_texticon  Consumer Goods Factories factor: [?347.TUR_ottoman_state_consumer_goods_factor|.1%Y]"
  TUR_armenian_minority_name:0 "£ww1_flag_ARM  Armenian Minority"
  TUR_arab_minority_name:0 "£ww1_flag_ARB  Arab Minority"
  TUR_greek_minority_name:0 "£ww1_game_rule_flag_GRE  Greek Minority"
@@ -10044,7 +10049,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  SCO_form_SCO_ENG_category:0 "Scottish Britain"
  SCO_form_SCO_ENG:0 "Reunite the Great Britain under the Blue Flag"
 
- ALB_TUR_system_for_minorities:0 "Adopt the §Y[TUR.getFlag] [TUR.getAdjective]§! Minority management."
+ ALB_TUR_system_for_minorities:0 "Adopt the §Y[TUR.getFlag] [TUR.getAdjective]§! Management of Minorities."
 
  KUW_renounce_ottoman_suzerainty:0 "Renounce the Ottoman Suzerainty"
  KUW_help_basrah_invasion:0 "Help [ROOT.Overlord.GetAdjective] Effort Against [FROM.GetName]"
