--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -116,7 +116,7 @@ HUN_plus_1ep:0 "you'll get §G1§! points of entente"
  # decision
  HUN_crisis:0 "Hungarian lands"
  HUN_crisis_mission:0 "Crisis ends"
- HUN_minority:0 "Our minorities"
+ HUN_minority:0 "Our Minorities"
  HUN_minority_mission:0 "Realese minority"
  HUN_openly_support_labour_unions:0 "Openly Support Labour Unions"
  HUN_expand_women_rights:0 "Expand Women Rights"
@@ -131,6 +131,7 @@ HUN_plus_1ep:0 "you'll get §G1§! points of entente"
  HUN_cantonize_transylvania:0 "Cantonize Transylvania"
  HUN_cantonize_slovakia_and_carpat:0 "Cantonize Slovakia and Carpatho-Ruthenia"
  HUN_cantonize_the_Southern_lands:0 "Cantonize the Southern-Lands"
+ HUN_social_reform:0 "Social Reforms"
  
  #events
  ww1_hungary.1.t:0 "autonomus for russins"
