progress so far

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -162,7 +162,7 @@
  STATE_161: "Romagna"
  STATE_162: "Tuscany"
  STATE_163: "Zara"
- STATE_164: "Dodecanese"
+ STATE_164: "On İki Ada"
  STATE_165: "Catalonia"
  STATE_166: "Aragon"
  STATE_167: "Valencia"
@@ -788,7 +788,7 @@
  STATE_787: "Aleksandropol"
  STATE_788: "Yukarı Cuma"
  STATE_789: "Walvis Bay"
- STATE_790: "Aegean Islands"
+ STATE_790: "Archipelago"
  STATE_791: "Ha'il"
  STATE_792: "Jubaland"
  STATE_793: "Eupen"
@@ -897,7 +897,7 @@
  STATE_896: "Sabah"
  STATE_897: "Brunei"
  STATE_898: "Athens"
- STATE_899: "Rhodes"
+ STATE_899: "Rodos"
  STATE_900: "Cyclades"
  STATE_901: "Bajo Chaco"
  STATE_902: "West Nile"
