--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2951,6 +2951,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_ottoman_state_war_support_factor_106_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?106.TUR_ottoman_state_war_support_factor|=2%+]"
  TUR_ottoman_state_political_power_factor_106_yes:0 "\n£political_power_texticon  Political Power Gain: [?106.TUR_ottoman_state_political_power_factor|=2%+]"
  TUR_ottoman_state_consumer_goods_factor_106_yes:0 "\n£consumer_goods_texticon  Consumer Goods Factories factor: [?106.TUR_ottoman_state_consumer_goods_factor|.1%Y]"
+ TUR_minority_state_modifier_203:0 "[203.GetName]§W\nModifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_ottoman_state_stability_factor_203][TUR_ottoman_state_war_support_factor_203][TUR_ottoman_state_political_power_factor_203][TUR_ottoman_state_consumer_goods_factor_203]§!"
+ ottoman_minority_effect_tooltip_203_blocked:0 "[203.GetName]\nModifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_ottoman_state_stability_factor_203][TUR_ottoman_state_war_support_factor_203][TUR_ottoman_state_political_power_factor_203][TUR_ottoman_state_consumer_goods_factor_203]"
+ TUR_ottoman_state_stability_factor_203_yes:0 "\n£stability_texticon  Stability: [?203.TUR_ottoman_state_stability_factor|=2%+]"
+ TUR_ottoman_state_war_support_factor_203_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?203.TUR_ottoman_state_war_support_factor|=2%+]"
+ TUR_ottoman_state_political_power_factor_203_yes:0 "\n£political_power_texticon  Political Power Gain: [?203.TUR_ottoman_state_political_power_factor|=2%+]"
+ TUR_ottoman_state_consumer_goods_factor_203_yes:0 "\n£consumer_goods_texticon  Consumer Goods Factories factor: [?203.TUR_ottoman_state_consumer_goods_factor|.1%Y]"
  TUR_minority_state_modifier_826:0 "[826.GetName]§W\nModifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_ottoman_state_stability_factor_826][TUR_ottoman_state_war_support_factor_826][TUR_ottoman_state_political_power_factor_826][TUR_ottoman_state_consumer_goods_factor_826]§!"
  ottoman_minority_effect_tooltip_826_blocked:0 "[826.GetName]\nModifies §Y[TUR_separatist_sentiments_tt]§! by[TUR_ottoman_state_stability_factor_826][TUR_ottoman_state_war_support_factor_826][TUR_ottoman_state_political_power_factor_826][TUR_ottoman_state_consumer_goods_factor_826]"
  TUR_ottoman_state_stability_factor_826_yes:0 "\n£stability_texticon  Stability: [?826.TUR_ottoman_state_stability_factor|=2%+]"
