--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9506,6 +9506,20 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_flavor_raj.23.a:0 "He has left his mark on the subcontinent."
  dadabhai_naoroji_death_reward:0 "§YDadabhai Naoroji§! dies."
 
+ # 1918
+ ww1_flavor_raj.24.t:0 "Stri Dharma First Publication"
+ ww1_flavor_raj.24.d:0 "Today marks a significant milestone in the history of women's rights in India with the inaugural publication of Stri Dharma, the official magazine of the Women's Indian Association (WIA). This new periodical promises to be a powerful voice advocating for the social, political, and economic rights of Indian women.\n\nThe Women's Indian Association, founded in 1917 by prominent social reformers including Dr. Annie Besant, has been at the forefront of the women's movement in India since its founding. Its title, ''Stri Dharma'', is Sanskrit for the Dharma of women:''Their right way''."
+ ww1_flavor_raj.24.a:0 "As if that would have any significance.\n*Laughs in patriarchy*"
+
+ ww1_flavor_raj.25.t:0 "Madras Labour Union Founded"
+ ww1_flavor_raj.25.d:0 "Today the ''Madras Labour Union'' was founded, marking the first organized labor union in India. This historic event comes in response to the oppressive working conditions faced by industrial laborers in Madras. Spearheaded by leaders like B.P. Wadia, the union aims to secure fair wages, reasonable working hours, and improved working conditions for the workforce."
+ ww1_flavor_raj.25.a:0 "Let's hope this doesn't lead to the creation of a full-blown Communist Party!"
+ madras_labour_union_reward:0 "§YIt will lead to the creation of a full-blown Communist Party.§!\n\n"
+
+ ww1_flavor_raj.26.t:0 "Kamuthi Looting"
+ ww1_flavor_raj.26.d:0 "A violent disturbance erupted in Kamuthi yesterday, resulting in significant loss of property and lives. The unrest, which has its roots in economic tensions between the Nadar and Maravar communities, escalated into a full-scale riot.\n\nTensions flared in the weekly market when Maravar villagers occupied a stall prepared by Nadar traders. Following an attack by the Nadars, a Panchayat ruled against them, leading to rising tensions. Rumors circulated that Kamuthi would be attacked on September 17.\n\nThe local police, anticipating trouble, dispatched a detachment of 15 constables on September 16. Despite their efforts, a mob of around 1000 Maravars stormed the Bazaar street, looting and setting fire to shops and houses. The police opened fire in an attempt to control the chaos, resulting in the deaths of around fifty rioters and two policemen, including the head constable. The riot caused extensive damage, with property losses estimated at 50,000 Rupees."
+ ww1_flavor_raj.26.a:0 "Truly tragic."
+
  # 1922
  ww1_flavor_raj.21.t:0 "Bijolia Agreement"
  ww1_flavor_raj.21.d:0 "After the Maharana of Bijolia failed to act on the report of the first commission, he appointed another commission in February 1920, which came to the same conclusion. Other jagirdars, fearing that the Maharana's intervention would lead to a chain reaction, influenced the Maharana not to act on the commission's report. Nevertheless, these efforts drew the attention of national leaders to the Bijolia movement and it succeeded in gaining their support. As a result, the Bijolia peasant movement continued to gain publicity and began to spread to other jagirs such as Begun, Parsoli and Bhinder. In December 1921, the Mewar State Resident reported:\n\n''The unrest is now spreading to Bhinder, an estate under the darbar management, where the cultivators are refusing the pay revenue. The situation in Bijolia and in the neighbouring thikanas of Parsoli, Begun and Basi has distinctly deteriorated. There is a general refusal to pay revenue. There is threat of violence if any attempt is made to collect revenue or to enforce official orders...An atmosphere of discontent is being created and the movement is spreading.''\n\nThis compelled the Governor General's agent to visit the various jagirs of Mewar and instruct the jagirdar and the state of Mewar to conclude an agreement with the farmers. Finally, the Bijolia Agreement was signed today, bringing with it many changes, including the reduction in amount of talwar bandhi, no taxes when there was no cultivation, reduction in chatoond tax and land revenue, etc."
@@ -9591,8 +9605,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.21.d:0 "PLACEHOLDER"
  ww1_raj.21.a:0 "Let's hope this doesn't devolve into violence."
 
- 
-
  ww1_raj.23.t:0 "George V Adress the Parliament"
  ww1_raj.23.d:0 "Today, King George V addressed the British Parliament, reflecting on his recent tour of the imperial colonies, including his visit to India a few months ago. In his speech, he expressed his admiration for the loyalty and progress he had witnessed among the Indian people and government. This speech came shortly after the great Delhi Durbar, where he and Queen Mary were proclaimed Emperor and Empress of India, and a new series of reforms for India were announced."
  ww1_raj.23.a:0 "The Raj shall live a thousand years."
@@ -9614,10 +9626,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.30.t:0 "Bijolia movement"
  ww1_raj.30.d:0 "PLACEHOLDER"
  ww1_raj.30.a:0 "Another peasant movement, huh."
-
- ww1_raj.31.t:0 "Kamuthi Looting"
- ww1_raj.31.d:0 "PLACEHOLDER"
- ww1_raj.31.a:0 "The beginning of a trend."
  
  ww1_raj.32.t:0 "Murder of Clement De La Haye"
  ww1_raj.32.d:0 "During the night, Clement De La Haye, the headmaster of Newington House, a college in Madras, was shot dead in his bed. Although the heir to the Singampatti estate was initially accused, he was quickly acquitted, leaving the identity of the murderer unknown.\n\nVarious motives have been put forward for the murder. According to eyewitnesses, the boys at the house were often offended by De La Haye's racist remarks, as he often referred to them as ''barbaric Tamilians''. There were also rumours that some of the boys at the college had been seduced by De La Haye's wife."
