Hungary, Treaty of Trianon desc and minor fixes

--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
- # HUNGARY
+ ##################
+ ### CHARACTERS ###
+ ##################
  HUN_mihaly_karolyi:0 "Mihály Károlyi"
  HUN_gyula_gombos:0 "Gyula Gömbös"
  HUN_tibor_szamuely:0 "Tibor Szamuely"
@@ -48,31 +50,34 @@
  HUN_baro_samuel:0 "báró Sámuel Apór de Al-Tórja"
  HUN_gombos_gyula:0 "Gömbös Gyula"
 
-
- # Entente Mechanic
-HUN_entente_points_category:0 "Entente points"
-HUN_entente_points_category_desc:0 "placeholder"
-HUN_treaty_of_trianon:0 "Treaty of Trianon"
- #focus
+ ##################
+ ### FOCUS TREE ###
+ ##################
+ 
+ # From the Ashes of the Empire
  HUN_from_the_ashes_of_the_empire:0 "From the Ashes of the Empire"
-
+ 
+ # Social Democracy Path
  HUN_social_democracy:0 "Magyar Népköztársaság"
  HUN_social_democracy_reward:0 "§RThis focus will be automatically completed once Mihály Károlyi becomes Prime Minister.§!"
  HUN_fire_the_high_command:0 "Fire the High Command"
  HUN_the_soldiers_council:0 "Ally the Soldier's Council"
-
+ 
+ # Aster Compromise Path
  HUN_the_aster_compromise:0 "The Aster Compromise"
  HUN_the_aster_compromise_reward:0 "§RThis focus will be automatically completed once Mihály Károlyi comes to an agreement with Joseph August von Österreich before the Battle of the Chain Bridge.§!"
  HUN_arrest_pepper_man:0 "Arrest József Pogány"
  HUN_arrest_pepper_man_reward:0 "We will arrest §YJózsef Pogány§!, the president of the Soldiers' Soviet, which has been preventing our government from carrying out military reforms.\n\n"
  HUN_linder_plan:0 "Linder's Plan"
  HUN_bohm_plan:0 "Böhm's Plan"
-
+ 
+ # Shared Tree (Aster Compromise x Social Democracy)
  HUN_social_reforms:0 "Social Reforms"
  HUN_land_reforms:0 "Land Reform"
  HUN_minority_politics:0 "Minority Politics"
  HUN_canton_project:0 "Kelet-Svájc Projekt"
-
+ 
+ # Homo Regius Path
  HUN_homo_regius:0 "The King's Man"
  HUN_homo_regius_reward:0 "§RThis focus will be automatically completed once Joseph August von Österreich successfully coups the Károlyi government.§!"
  HUN_new_national_government:0 "New National Government"
@@ -89,7 +94,8 @@ HUN_treaty_of_trianon:0 "Treaty of Trianon"
  HUN_renewed_offensive:0 "Renewed Offensive"
  HUN_a_seat_at_the_table:0 "A Seat at the Table"
  HUN_national_dishonor:0 "National Dishonor"
-
+ 
+ # Horty Tree
  HUN_second_times_the_charm:0 "Magyar Köztársaság"
  HUN_suffrage_reforms:0 "Suffrage Reforms"
  HUN_withdraw_soviet_decrees:0 "Withdraw Soviet Decrees"
@@ -101,23 +107,38 @@ HUN_treaty_of_trianon:0 "Treaty of Trianon"
  HUN_settlement_of_social_public_situations:0 "Settlement of Social Public Situations"
  HUN_christian_politics:0 "Christian Politics"
  HUN_establish_the_national_assembly:0 "Establish the National Assembly"
-#tooltips
-HUN_plus_3ep:0 "you'll get §G3§! points of entente"
-HUN_plus_1ep:0 "you'll get §G1§! points of entente"
- #idea
+
+ ########################
+ ### NATIONAL SPIRITS ###
+ ########################
+ 
+ # From the Ashes of the Empire Starting Spirits
  HUN_economy_in_ruins:0 "Economy in Ruins"
  HUN_entente_blockade:0 "Entente Blockade"
  HUN_green_cadres:0 "Green Cadres"
  HUN_soldiers_council_idea1:0 "Soldiers' Council"
  HUN_soldiers_council_idea2:0 "Soldiers' Council"
+ 
+ # Social Democracy Path Spirits
  HUN_neglected_army1:0 "Neglected Army"
  HUN_neglected_army2:0 "Neglected Army"
+
+ #################
+ ### DECISIONS ###
+ #################
  
- # decision
- HUN_crisis:0 "Hungarian lands"
- HUN_crisis_mission:0 "Crisis ends"
- HUN_minority:0 "Our Minorities"
- HUN_minority_mission:0 "Realese minority"
+ # Treaty of Trianon
+ HUN_entente_points_category:0 "Treaty of Trianon"
+ HUN_entente_points_category_desc:0 "Treaty of Trianon description here.\n\n§4Little Entente§!:\nCurrent [ROM.GetAdjective] ([ROM.GetFlag]) Points:  [?VAR_entente_points_romania|Y0]\nCurrent [SER.GetAdjective] ([SER.GetFlag]) Points:  [?VAR_entente_points_serbia|Y0]\nCurrent [CZE.GetAdjective] ([CZE.GetFlag]) Points:  [?VAR_entente_points_czech|Y0]\n\n[USA.GetNameDefCap] ([USA.GetFlag]), [ENG.GetNameDef] ([ENG.GetFlag]) and [FRA.GetNameDef] ([FRA.GetFlag]) support this faction.\n\n§7Hungary Side§!:\nCurrent [HUN.GetAdjective] ([HUN.GetFlag]) Points:  [?VAR_entente_points_hungary|Y0]\n\n[ITA.GetNameDefCap] ([ITA.GetFlag]) support this faction."
+ HUN_treaty_of_trianon:0 "Signing of the Treaty of Trianon"
+
+ HUN_plus_10ep:0 "Entente Points:§G +10§!."
+ HUN_plus_3ep:0 "Entente Points:§G +3§!."
+ HUN_plus_1ep:0 "Entente Points:§G +1§!."
+
+ # Social Reforms
+ HUN_social_reforms_category:0 "Social Reforms"
+
  HUN_openly_support_labour_unions:0 "Openly Support Labour Unions"
  HUN_expand_women_rights:0 "Expand Women Rights"
  HUN_expand_workers_rights:0 "Expand Workers Rights"
@@ -125,15 +146,20 @@ HUN_plus_1ep:0 "you'll get §G1§! points of entente"
  HUN_raise_minimum_wage:0 "Raise Minimum Wage"
  HUN_implement_subsidies_for_farmers:0 "Implement Subsidies for Farmers"
  HUN_implement_universal_and_secret_voting:0 "Implement Universal and Secret voting"
+
+ # Minority Politics
+ HUN_minority:0 "Our Minorities"
+
  HUN_establish_autonomy_to_minorities:0 "Establish Autonomy to Minorities"
  HUN_establish_national_councils:0 "Establish National Councils"
  HUN_expand_the_hegyvideki_action_to_slovaks:0 "Expand the Hegyvideki Action to Slovaks"
  HUN_cantonize_transylvania:0 "Cantonize Transylvania"
  HUN_cantonize_slovakia_and_carpat:0 "Cantonize Slovakia and Carpatho-Ruthenia"
  HUN_cantonize_the_Southern_lands:0 "Cantonize the Southern-Lands"
- HUN_social_reform:0 "Social Reforms"
  
- #events
+ ##############
+ ### EVENTS ###
+ ##############
  ww1_hungary.1.t:0 "autonomus for russins"
  ww1_hungary.1.a:0 "Release Rusins?"
  ww1_hungary.1.b:0 "NO"
