--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -788,7 +788,7 @@
  STATE_787: "Aleksandropol"
  STATE_788: "Yukarı Cuma"
  STATE_789: "Walvis Bay"
- STATE_790: "Archipelago"
+ STATE_790: "Cezayir-i Bahr-i Sefid"
  STATE_791: "Ha'il"
  STATE_792: "Jubaland"
  STATE_793: "Eupen"
