--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5104,17 +5104,6 @@ ROM_center_consensus_desc:0 "Partisan bickering between the PNL and the PC has h
 ROM_reach_out_to_the_industrialists:0 "Reach Out to the Industrialists"
 ROM_reach_out_to_the_industrialists_desc:0 ""
 
-ROM_romanian_army:0 "The Romanian Army"
-ROM_romanian_army_desc:0 "Our army is currently using oudated tactics and equipment. With tensions rising in Europe, we may have an opprotunity to finally claim our rightful territories beyond our current borders. To ensure we are ready for this, we'll need to modernize the army"
-ROM_lessons_from_prussian:0 "Lessons from the Prussians"
-ROM_lessons_from_prussian_desc:0 ""
-ROM_french_russian_attache:0 "Franco-Russian Attaché"
-ROM_french_russian_attache_desc:0 ""
-ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan Wars"
-ROM_lessons_from_balkan_wars_desc:0 "" 
-ROM_adapt_to_the_times:0 "Adapt to the Times"
-ROM_adapt_to_the_times_desc:0 ""
-
 ROM_minimum_wage_law:0 "Minimum Wage Law"
 ROM_anti_corruption_campaign:0 "Anti-Corruption Campaign"
 ROM_halve_parliments_size:0 "Halve Parliaments Seats"
@@ -5157,7 +5146,7 @@ ROM_reconcile_pcd_desc:0 ""
 ROM_great_egoism:0 "Great Egoism"
 ROM_accept_the_call_to_war:0 "Accept The Call To War"
 ROM_anti_russianism:0 "Anti-Russianism"
-ROM_german_support:0 "Lessons Of The Prussians"
+ROM_german_attache:0 "German Attaché"
 ROM_romanian_claims:0 "Romanian Claims"
 ROM_please_bucovina:0 "Ask For a Bukovina"
 ROM_secure_bulgaria:0 "Bulgarian Security"
