Pepper Man as well as decisions fixes

--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -49,7 +49,11 @@
  HUN_mallasz_gusztav:0 "Mallász Gusztáv"
  HUN_baro_samuel:0 "báró Sámuel Apór de Al-Tórja"
  HUN_gombos_gyula:0 "Gömbös Gyula"
-
+ ##############
+ ### TRAITS ###
+ ##############
+ president_of_the_soldier_soviet:0 "President of the Soldier's Council"
+ 
  ##################
  ### FOCUS TREE ###
  ##################
@@ -68,6 +72,7 @@
  HUN_the_aster_compromise_reward:0 "§RThis focus will be automatically completed once Mihály Károlyi comes to an agreement with Joseph August von Österreich before the Battle of the Chain Bridge.§!"
  HUN_arrest_pepper_man:0 "Arrest József Pogány"
  HUN_arrest_pepper_man_reward:0 "We will arrest §YJózsef Pogány§!, the president of the Soldiers' Soviet, which has been preventing our government from carrying out military reforms.\n\n"
+ pepper_man_arrested:0 " József Pogány Arrested"
  HUN_linder_plan:0 "Linder's Plan"
  HUN_bohm_plan:0 "Böhm's Plan"
  
@@ -133,6 +138,7 @@
  HUN_treaty_of_trianon:0 "Signing of the Treaty of Trianon"
 
  HUN_plus_10ep:0 "Entente Points:§G +10§!."
+ HUN_plus_5ep:0 "Entente Points:§G +5§!."
  HUN_plus_3ep:0 "Entente Points:§G +3§!."
  HUN_plus_1ep:0 "Entente Points:§G +1§!."
 
@@ -148,14 +154,14 @@
  HUN_implement_universal_and_secret_voting:0 "Implement Universal and Secret voting"
 
  # Minority Politics
- HUN_minority:0 "Our Minorities"
+ HUN_minority:0 "Minority Politics"
 
  HUN_establish_autonomy_to_minorities:0 "Establish Autonomy to Minorities"
  HUN_establish_national_councils:0 "Establish National Councils"
  HUN_expand_the_hegyvideki_action_to_slovaks:0 "Expand the Hegyvideki Action to Slovaks"
  HUN_cantonize_transylvania:0 "Cantonize Transylvania"
  HUN_cantonize_slovakia_and_carpat:0 "Cantonize Slovakia and Carpatho-Ruthenia"
- HUN_cantonize_the_Southern_lands:0 "Cantonize the Southern-Lands"
+ HUN_cantonize_the_southern_lands:0 "Cantonize the Southern-Lands"
  
  ##############
  ### EVENTS ###
