Hungary, Entente Points and tt

--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -81,6 +81,7 @@
  HUN_land_reforms:0 "Land Reform"
  HUN_minority_politics:0 "Minority Politics"
  HUN_canton_project:0 "Kelet-Svájc Projekt"
+ HUN_canton_project_reward:0 "Completing this focus will enable £decision_icon_small §YDecisions§! to establish §YCantons§! within ([HUN.GetFlag]) Hungary."
  
  # Homo Regius Path
  HUN_homo_regius:0 "The King's Man"
@@ -137,10 +138,10 @@
  HUN_entente_points_category_desc:0 "Treaty of Trianon description here.\n\n§4Little Entente§!:\nCurrent [ROM.GetAdjective] ([ROM.GetFlag]) Points:  [?VAR_entente_points_romania|Y0]\nCurrent [SER.GetAdjective] ([SER.GetFlag]) Points:  [?VAR_entente_points_serbia|Y0]\nCurrent [CZE.GetAdjective] ([CZE.GetFlag]) Points:  [?VAR_entente_points_czech|Y0]\n\n[USA.GetNameDefCap] ([USA.GetFlag]), [ENG.GetNameDef] ([ENG.GetFlag]) and [FRA.GetNameDef] ([FRA.GetFlag]) support this faction.\n\n§7Hungary Side§!:\nCurrent [HUN.GetAdjective] ([HUN.GetFlag]) Points:  [?VAR_entente_points_hungary|Y0]\n\n[ITA.GetNameDefCap] ([ITA.GetFlag]) support this faction."
  HUN_treaty_of_trianon:0 "Signing of the Treaty of Trianon"
 
- HUN_plus_10ep:0 "Entente Points:§G +10§!."
- HUN_plus_5ep:0 "Entente Points:§G +5§!."
- HUN_plus_3ep:0 "Entente Points:§G +3§!."
- HUN_plus_1ep:0 "Entente Points:§G +1§!."
+ HUN_plus_10ep:0 "£neutral_experience  Entente Points:§G +10§!."
+ HUN_plus_5ep:0 "£neutral_experience  Entente Points:§G +5§!."
+ HUN_plus_3ep:0 "£neutral_experience  Entente Points:§G +3§!."
+ HUN_plus_1ep:0 "£neutral_experience  Entente Points:§G +1§!."
 
  # Social Reforms
  HUN_social_reforms_category:0 "Social Reforms"
