Hungary, Entente Dicksucking Competition

--- a/localisation/english/ww1_hungary_l_english.yml
+++ b/localisation/english/ww1_hungary_l_english.yml
@@ -63,13 +63,13 @@
  
  # Social Democracy Path
  HUN_social_democracy:0 "Magyar Népköztársaság"
- HUN_social_democracy_reward:0 "§RThis focus will be automatically completed once Mihály Károlyi becomes Prime Minister.§!"
+ HUN_social_democracy_reward:0 "§RThis focus will be automatically completed once Mihály Károlyi becomes Prime Minister.§!\n\n"
  HUN_fire_the_high_command:0 "Fire the High Command"
  HUN_the_soldiers_council:0 "Ally the Soldier's Council"
  
  # Aster Compromise Path
  HUN_the_aster_compromise:0 "The Aster Compromise"
- HUN_the_aster_compromise_reward:0 "§RThis focus will be automatically completed once Mihály Károlyi comes to an agreement with Joseph August von Österreich before the Battle of the Chain Bridge.§!"
+ HUN_the_aster_compromise_reward:0 "§RThis focus will be automatically completed once Mihály Károlyi comes to an agreement with Joseph August von Österreich before the Battle of the Chain Bridge.§!\n\n"
  HUN_arrest_pepper_man:0 "Arrest József Pogány"
  HUN_arrest_pepper_man_reward:0 "We will arrest §YJózsef Pogány§!, the president of the Soldiers' Soviet, which has been preventing our government from carrying out military reforms.\n\n"
  pepper_man_arrested:0 " József Pogány Arrested"
@@ -134,14 +134,36 @@
  #################
  
  # Treaty of Trianon
- HUN_entente_points_category:0 "Treaty of Trianon"
- HUN_entente_points_category_desc:0 "Treaty of Trianon description here.\n\n§4Little Entente§!:\nCurrent [ROM.GetAdjective] ([ROM.GetFlag]) Points:  [?VAR_entente_points_romania|Y0]\nCurrent [SER.GetAdjective] ([SER.GetFlag]) Points:  [?VAR_entente_points_serbia|Y0]\nCurrent [CZE.GetAdjective] ([CZE.GetFlag]) Points:  [?VAR_entente_points_czech|Y0]\n\n[USA.GetNameDefCap] ([USA.GetFlag]), [ENG.GetNameDef] ([ENG.GetFlag]) and [FRA.GetNameDef] ([FRA.GetFlag]) support this faction.\n\n§7Hungary Side§!:\nCurrent [HUN.GetAdjective] ([HUN.GetFlag]) Points:  [?VAR_entente_points_hungary|Y0]\n\n[ITA.GetNameDefCap] ([ITA.GetFlag]) support this faction."
- HUN_treaty_of_trianon:0 "Signing of the Treaty of Trianon"
+ HUN_entente_points_category:0 "[FRA.GetFactionName] Cooperation Score"
+ HUN_entente_points_category_desc:0 "[treaty_of_trianon_introduction]\n\n[little_entente]\n[romanian_points_win][czechoslovak_points][serbian_points][france_support]\n[losing_side]\n[hungarian_points][romanian_points_lose][italy_support]\n[neutral_side]\n[eng_support][space][usa_support]"
+ 
+ HUN_entente_points_introduction:0 "Treaty of Trianon description here."
+ 
+ HUN_entente_points_little_entente:0 "§4Little Entente§!:"
+ HUN_entente_points_losing_side:0 "§RLosing Side§!:"
+ HUN_entente_points_hungary_side:0 "§7Hungary Side§!:"
+ HUN_entente_points_neutral_side:0 "§LNeutral Side§!:"
+ 
+ HUN_entente_points_romanian_points_win:0 "Current [ROM.GetAdjective] ([ROM.GetFlag]) Points:  [?VAR_entente_points_romania|Y0]\n"
+ HUN_entente_points_romanian_points_lose:0 "Current [ROM.GetAdjective] ([ROM.GetFlag]) Points:  [?VAR_entente_points_romania|Y0]\n"
+ HUN_entente_points_czechoslovakia_points:0 "Current [CZE.GetAdjective] ([CZE.GetFlag]) Points:  [?VAR_entente_points_czech|Y0]\n"
+ HUN_entente_points_hungary_points:0 "Current [HUN.GetAdjective] ([HUN.GetFlag]) Points:  [?VAR_entente_points_hungary|Y0]\n"
+ HUN_entente_points_serbia_points:0 "Current [SER.GetAdjective] ([SER.GetFlag]) Points:  [?VAR_entente_points_serbia|Y0]\n"
 
- HUN_plus_10ep:0 "£neutral_experience  Entente Points:§G +10§!."
- HUN_plus_5ep:0 "£neutral_experience  Entente Points:§G +5§!."
- HUN_plus_3ep:0 "£neutral_experience  Entente Points:§G +3§!."
- HUN_plus_1ep:0 "£neutral_experience  Entente Points:§G +1§!."
+ HUN_france_support:0 "\n[FRA.GetNameDefCap] ([FRA.GetFlag]) support this Faction.\n"
+ HUN_italy_support:0 "\n[ITA.GetNameDefCap] ([ITA.GetFlag]) support this Faction.\n"
+
+ HUN_eng_support:0 "[ENG.GetNameDefCap] ([ENG.GetFlag]) is a neutral observer."
+ HUN_usa_support:0 "[USA.GetNameDefCap] ([USA.GetFlag]) is a neutral observer."
+ HUN_space:0 "\n"
+ 
+ HUN_treaty_of_trianon:0 "Formal Peace Treaty at Versailles"
+ treaty_of_trianon_signed:0 "Treaty of Trianon Signed"
+
+ HUN_plus_10ep:0 "£neutral_experience  [FRA.GetFactionName] Cooperation Points:§G +10§!."
+ HUN_plus_5ep:0 "£neutral_experience  [FRA.GetFactionName] Cooperation Points:§G +5§!."
+ HUN_plus_3ep:0 "£neutral_experience  [FRA.GetFactionName] Cooperation Points:§G +3§!."
+ HUN_plus_1ep:0 "£neutral_experience  [FRA.GetFactionName] Cooperation Points:§G +1§!."
 
  # Social Reforms
  HUN_social_reforms_category:0 "Social Reforms"
