--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9520,6 +9520,16 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_flavor_raj.26.d:0 "A violent disturbance erupted in Kamuthi yesterday, resulting in significant loss of property and lives. The unrest, which has its roots in economic tensions between the Nadar and Maravar communities, escalated into a full-scale riot.\n\nTensions flared in the weekly market when Maravar villagers occupied a stall prepared by Nadar traders. Following an attack by the Nadars, a Panchayat ruled against them, leading to rising tensions. Rumors circulated that Kamuthi would be attacked on September 17.\n\nThe local police, anticipating trouble, dispatched a detachment of 15 constables on September 16. Despite their efforts, a mob of around 1000 Maravars stormed the Bazaar street, looting and setting fire to shops and houses. The police opened fire in an attempt to control the chaos, resulting in the deaths of around fifty rioters and two policemen, including the head constable. The riot caused extensive damage, with property losses estimated at 50,000 Rupees."
  ww1_flavor_raj.26.a:0 "Truly tragic."
 
+ # 1919
+
+ ww1_flavor_raj.27.t:0 "Kisan Sabha"
+ ww1_flavor_raj.27.d:0 "In a momentous gathering, Indian farmers have united to form the Kisan Sabha, an organization dedicated to championing their rights and addressing grievances. The Sabha, established on April 6th, 1919, in Lucknow, aims to tackle oppressive landlord practices, exorbitant rents, and unfair taxes. Prominent leaders like Swami Sahajanand Saraswati have taken the helm, organizing mass meetings and protests. Other notable members include Gauri Shankar Mishra, Indra Narayan Dwivedi and Madan Mohan Malviya."
+ ww1_flavor_raj.27.a:0 "Another peasant movement, huh."
+
+ ww1_flavor_raj.28.t:0 "Murder of Clement De La Haye"
+ ww1_flavor_raj.28.d:0 "During the night, Clement De La Haye, the headmaster of Newington House, a college in Madras, was shot dead in his bed. Although the heir to the Singampatti estate was initially accused, he was quickly acquitted, leaving the identity of the murderer unknown.\n\nVarious motives have been put forward for the murder. According to eyewitnesses, the boys at the house were often offended by De La Haye's racist remarks, as he often referred to them as ''barbaric Tamilians''. There were also rumours that some of the boys at the college had been seduced by De La Haye's wife."
+ ww1_flavor_raj.28.a:0 "His wife certainly is cute, but that's no reason to murder him!"
+
  # 1922
  ww1_flavor_raj.21.t:0 "Bijolia Agreement"
  ww1_flavor_raj.21.d:0 "After the Maharana of Bijolia failed to act on the report of the first commission, he appointed another commission in February 1920, which came to the same conclusion. Other jagirdars, fearing that the Maharana's intervention would lead to a chain reaction, influenced the Maharana not to act on the commission's report. Nevertheless, these efforts drew the attention of national leaders to the Bijolia movement and it succeeded in gaining their support. As a result, the Bijolia peasant movement continued to gain publicity and began to spread to other jagirs such as Begun, Parsoli and Bhinder. In December 1921, the Mewar State Resident reported:\n\n''The unrest is now spreading to Bhinder, an estate under the darbar management, where the cultivators are refusing the pay revenue. The situation in Bijolia and in the neighbouring thikanas of Parsoli, Begun and Basi has distinctly deteriorated. There is a general refusal to pay revenue. There is threat of violence if any attempt is made to collect revenue or to enforce official orders...An atmosphere of discontent is being created and the movement is spreading.''\n\nThis compelled the Governor General's agent to visit the various jagirs of Mewar and instruct the jagirdar and the state of Mewar to conclude an agreement with the farmers. Finally, the Bijolia Agreement was signed today, bringing with it many changes, including the reduction in amount of talwar bandhi, no taxes when there was no cultivation, reduction in chatoond tax and land revenue, etc."
@@ -9626,14 +9636,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.30.t:0 "Bijolia movement"
  ww1_raj.30.d:0 "PLACEHOLDER"
  ww1_raj.30.a:0 "Another peasant movement, huh."
- 
- ww1_raj.32.t:0 "Murder of Clement De La Haye"
- ww1_raj.32.d:0 "During the night, Clement De La Haye, the headmaster of Newington House, a college in Madras, was shot dead in his bed. Although the heir to the Singampatti estate was initially accused, he was quickly acquitted, leaving the identity of the murderer unknown.\n\nVarious motives have been put forward for the murder. According to eyewitnesses, the boys at the house were often offended by De La Haye's racist remarks, as he often referred to them as ''barbaric Tamilians''. There were also rumours that some of the boys at the college had been seduced by De La Haye's wife."
- ww1_raj.32.a:0 "His wife certainly is cute, but that's no reason to murder him!"
- 
- ww1_raj.33.t:0 "Kisan Sabha"
- ww1_raj.33.d:0 "The Kisan Sabha (farmers' association) was recently proclaimed in northern Assam. It is a protest movement involving many agricultural caste groups. It has its origins in the Uttar Pradesh Kisan Sabha, founded in Lucknow in 1918 by Gauri Shankar Mishra, Indra Narayan Dwivedi and Madan Mohan Malviya."
- ww1_raj.33.a:0 "Another peasant movement, huh."
 
  ww1_raj.34.t:0 "Akali Movement"
  ww1_raj.34.d:0 "PLACEHOLDER"
